--- a/labs/lab01_fintech.ipynb
+++ b/labs/lab01_fintech.ipynb
@@ -64,9 +64,49 @@
         "\n",
         "This plan keeps you moving between coding, light quality checks, and interpretation. You can extend any part in directed learning.\n",
         "\n",
+        "## Before You Code: The Big Picture\n",
+        "\n",
+        "Financial data science involves three repeating activities. Understanding this pattern helps you navigate any coding task with confidence.\n",
+        "\n",
+        "::: {.callout-note}\n",
+        "## The Three-Step Pattern You'll Use Everywhere\n",
+        "\n",
+        "**1. Prepare** → Get your data ready (clean, format, check)  \n",
+        "**2. Visualize or Analyze** → Create charts or run models  \n",
+        "**3. Validate** → Check results make sense before trusting them\n",
+        "\n",
+        "You'll use this pattern in every task today. Once you master it here, you can apply it to any financial analysis.\n",
+        ":::\n",
+        "\n",
+        "### What You'll Build Today\n",
+        "\n",
+        "By the end of this lab, you will have:\n",
+        "\n",
+        "- ✅ Two professional-quality charts (fund fees, bank margins)\n",
+        "- ✅ Working knowledge of Python plotting basics\n",
+        "- ✅ Quality checks that catch common data errors\n",
+        "- ✅ A written interpretation connecting charts to economic theory\n",
+        "\n",
+        "**Time estimate:** 60 minutes (FIN510) | 90-120 minutes (FIN720 with extensions)\n",
+        "\n",
+        "### Coding Confidence Builder\n",
+        "\n",
+        "::: {.callout-tip icon=false}\n",
+        "## 🎯 If You're New to Programming\n",
+        "\n",
+        "**You don't need to understand every line right away.** Today's goal is pattern recognition:\n",
+        "\n",
+        "- See the structure (prepare → visualize → validate)\n",
+        "- Run the code and observe what happens\n",
+        "- Modify small things (colors, labels, titles) to build intuition\n",
+        "- Understanding will deepen with practice\n",
+        "\n",
+        "Professional programmers also look up syntax constantly. The skill is knowing *what* you need, not memorizing *how* to type it.\n",
+        ":::\n",
+        "\n",
         "## Mini Exercise — Returns vs Prices (5–10 minutes)\n",
         "\n",
-        "This quick exercise shows why we analyse returns rather than prices."
+        "Before we create charts, let's understand why financial analysis uses **returns** instead of **prices**. This quick exercise builds intuition."
       ]
     },
     {
@@ -134,7 +174,46 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Task 1 — Fund Fee Trends"
+        "## Task 1 — Fund Fee Trends\n",
+        "\n",
+        "This task recreates the fee compression chart you saw in lecture. We'll build it in three steps: prepare data, create the plot, then validate it.\n",
+        "\n",
+        "### Step 1a: Prepare the data\n",
+        "\n",
+        "Start with the historical fee data as simple Python lists. These numbers represent asset-weighted average expense ratios from ICI reports."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Years we have data for\n",
+        "years = [2000, 2005, 2010, 2015, 2020, 2024]\n",
+        "\n",
+        "# Fee data (% of assets under management)\n",
+        "equity_mf = [1.00, 0.85, 0.79, 0.68, 0.50, 0.40]  # Equity mutual funds\n",
+        "bond_mf   = [0.85, 0.75, 0.70, 0.58, 0.45, 0.38]  # Bond mutual funds\n",
+        "index_etf = [0.30, 0.25, 0.20, 0.18, 0.15, 0.14]  # Index ETFs\n",
+        "\n",
+        "# Quick look: what's the fee decline for equity funds?\n",
+        "print(f\"Equity MF fees fell from {equity_mf[0]:.2f}% to {equity_mf[-1]:.2f}%\")\n",
+        "print(f\"That's a {(1 - equity_mf[-1]/equity_mf[0])*100:.0f}% reduction over 24 years\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "::: {.callout-tip}\n",
+        "## Understanding the Data\n",
+        "Each list represents one financial product. The numbers decline over time—that's the \"compression\" story. Notice ETFs started lower and fell less (already efficient).\n",
+        ":::\n",
+        "\n",
+        "### Step 1b: Create the plot\n",
+        "\n",
+        "Now we'll visualize these three series. Think of this as: (1) create canvas, (2) add lines, (3) label everything."
       ]
     },
     {
@@ -143,21 +222,22 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "years = [2000, 2005, 2010, 2015, 2020, 2024]\n",
-        "equity_mf = [1.00, 0.85, 0.79, 0.68, 0.50, 0.40]\n",
-        "bond_mf   = [0.85, 0.75, 0.70, 0.58, 0.45, 0.38]\n",
-        "index_etf = [0.30, 0.25, 0.20, 0.18, 0.15, 0.14]\n",
+        "# === STEP 1: Create the canvas ===\n",
+        "plt.figure(figsize=(9,5))  # Size in inches (width, height)\n",
         "\n",
-        "plt.figure(figsize=(9,5))\n",
+        "# === STEP 2: Plot each series as a line with markers ===\n",
         "plt.plot(years, equity_mf, marker='o', label='Equity MF')\n",
         "plt.plot(years, bond_mf,   marker='o', label='Bond MF')\n",
         "plt.plot(years, index_etf, marker='o', label='Index ETF')\n",
+        "\n",
+        "# === STEP 3: Add labels so readers understand the figure ===\n",
         "plt.title('Decline in Fund Fees (Illustrative)')\n",
-        "plt.xlabel('Year'); plt.ylabel('Average Expense Ratio (%)')\n",
-        "plt.grid(alpha=0.3); plt.legend(); plt.tight_layout()\n",
-        "assert len(years) == len(equity_mf) == len(bond_mf) == len(index_etf)\n",
-        "assert min(equity_mf) < max(equity_mf)\n",
-        "print(\"Fee chart checks passed ✔\")"
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('Average Expense Ratio (%)')\n",
+        "plt.grid(alpha=0.3)  # Subtle grid helps read values\n",
+        "plt.legend()         # Shows which line is which\n",
+        "plt.tight_layout()   # Prevents labels from being cut off\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -166,25 +246,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Pedagogical note: label axes clearly, prefer consistent styles, and test that trends are monotone when theory implies it.\n",
+        "::: {.callout-tip}\n",
+        "## Reading the Code\n",
+        "- `plt.plot(x, y, ...)` draws a line from your data\n",
+        "- `marker='o'` puts a dot at each data point\n",
+        "- `label='...'` names the line for the legend\n",
+        "- Each `plt` command adds one more piece to the figure\n",
+        ":::\n",
         "\n",
-        "## Task 2 — Banking NIM Persistence"
+        "### Step 1c: Validate your work\n",
+        "\n",
+        "Before moving on, run quick checks to catch mistakes early."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "years = [2000, 2005, 2010, 2015, 2020, 2024]\n",
-        "nim   = [3.9, 3.5, 3.6, 2.9, 2.6, 3.0]\n",
+        "# === Quality checks ===\n",
+        "# Do all lists have the same length? (they should!)\n",
+        "assert len(years) == len(equity_mf) == len(bond_mf) == len(index_etf), \\\n",
+        "    \"Data length mismatch - check your lists\"\n",
         "\n",
-        "plt.figure(figsize=(8,4.5))\n",
-        "plt.plot(years, nim, marker='o', color='tab:red', label='Bank NIM')\n",
-        "plt.title('Bank Net Interest Margin (Illustrative)')\n",
-        "plt.xlabel('Year'); plt.ylabel('NIM (%)')\n",
-        "plt.grid(alpha=0.3); plt.legend(); plt.tight_layout()\n",
-        "assert len(years) == len(nim)\n",
-        "print(\"NIM chart checks passed ✔\")"
+        "# Are fees actually declining for equity MFs? (theory says yes)\n",
+        "assert equity_mf[0] > equity_mf[-1], \\\n",
+        "    \"Equity fees should decline from 2000 to 2024\"\n",
+        "\n",
+        "print(\"✔ All checks passed! Your figure is ready.\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -193,6 +281,102 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "::: {.callout-note}\n",
+        "## Why These Checks Matter\n",
+        "In professional work, data errors are common (typos, missing values, wrong units). These `assert` statements catch problems **before** you present results. Get in the habit now.\n",
+        ":::\n",
+        "\n",
+        "**Pedagogical note:** This three-step pattern (prepare → visualize → validate) works for nearly every data visualization task. Master it here, reuse it everywhere.\n",
+        "\n",
+        "## Task 2 — Banking NIM Persistence\n",
+        "\n",
+        "Now you'll recreate the banking spreads chart. Notice how this pattern mirrors Task 1—that's intentional! Professional workflows reuse reliable patterns.\n",
+        "\n",
+        "### Step 2a: Prepare NIM data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Same years as before\n",
+        "years = [2000, 2005, 2010, 2015, 2020, 2024]\n",
+        "\n",
+        "# Bank net interest margins (%)\n",
+        "nim = [3.9, 3.5, 3.6, 2.9, 2.6, 3.0]\n",
+        "\n",
+        "# Quick comparison: how stable are NIMs vs fund fees?\n",
+        "print(f\"NIM in 2000: {nim[0]:.1f}%\")\n",
+        "print(f\"NIM in 2024: {nim[-1]:.1f}%\")\n",
+        "print(f\"Change: {nim[-1] - nim[0]:.1f} percentage points (compare to equity MF: {equity_mf[-1] - equity_mf[0]:.1f})\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "::: {.callout-important}\n",
+        "## The Key Contrast\n",
+        "Fund fees **compressed** (fell 0.6 pp). Bank NIMs **persisted** (fell only 0.9 pp, and oscillated). This is the puzzle!\n",
+        ":::\n",
+        "\n",
+        "### Step 2b: Create the plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# === Create canvas and plot ===\n",
+        "plt.figure(figsize=(8,4.5))\n",
+        "plt.plot(years, nim, marker='o', color='tab:red', label='Bank NIM')\n",
+        "\n",
+        "# === Label everything ===\n",
+        "plt.title('Bank Net Interest Margin (Illustrative)')\n",
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('NIM (%)')\n",
+        "plt.grid(alpha=0.3)\n",
+        "plt.legend()\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Step 2c: Validate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# Check data consistency\n",
+        "assert len(years) == len(nim), \"Data length mismatch\"\n",
+        "\n",
+        "# Unlike fees, NIMs don't monotonically decline (they oscillate with policy rates)\n",
+        "# So we just check they're in a reasonable range\n",
+        "assert all(0 < n < 10 for n in nim), \"NIMs should be between 0-10%\"\n",
+        "\n",
+        "print(\"✔ NIM chart checks passed\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "::: {.callout-tip}\n",
+        "## Try This Yourself\n",
+        "Before running the code, **predict** what the chart will show. Will it look like the fund fee chart (steady decline) or different? Then compare your prediction to the result. This active prediction strengthens learning.\n",
+        ":::\n",
+        "\n",
         "## Quality Gate for Figures (10 minutes)\n",
         "\n",
         "Before interpretation, run a tiny “figure quality gate” on your inputs and outputs."
