--- a/labs/lab02_bloomberg.ipynb
+++ b/labs/lab02_bloomberg.ipynb
@@ -28,6 +28,41 @@
         "- Anaconda/Spyder recommended\n",
         ":::\n",
         "\n",
+        "## Before You Start: The Big Picture\n",
+        "\n",
+        "Welcome to professional-grade financial data. The Bloomberg Terminal is the industry standard—used by traders, analysts, and portfolio managers globally. This lab lets you compare professional tools with free APIs and understand why financial firms pay $24,000/year per terminal.\n",
+        "\n",
+        "::: {.callout-note}\n",
+        "## The Professional Data Advantage\n",
+        "\n",
+        "**Why Bloomberg costs 100x more than free APIs:**\n",
+        "\n",
+        "1. **Data Quality** → Verified, cleaned, adjusted for corporate actions in real-time\n",
+        "2. **Coverage** → 350+ million securities, 4.5 million issuers, historical data back to 1970s\n",
+        "3. **Speed** → Real-time data, not 15-minute delayed like free sources\n",
+        "4. **Integration** → News, analytics, chat, execution all in one platform\n",
+        "5. **Support** → 24/7 Bloomberg help desk staffed by financial experts\n",
+        "\n",
+        "Free APIs work for academic projects. Bloomberg Terminal is what you use when managing real money.\n",
+        ":::\n",
+        "\n",
+        "### What You'll Learn Today\n",
+        "\n",
+        "By the end of this lab, you will have:\n",
+        "\n",
+        "- ✅ Used Bloomberg Desktop API (`blpapi`) to fetch professional-grade data\n",
+        "- ✅ Compared Bloomberg data quality with yfinance (head-to-head)\n",
+        "- ✅ Built a unified pipeline that handles both sources (with fallbacks)\n",
+        "- ✅ Understood trade-offs: quality vs. cost, speed vs. access\n",
+        "- ✅ Documented provenance (what data, from where, when, quality checks)\n",
+        "\n",
+        "**Time estimate:** 120 minutes (in-lab only, requires Bloomberg Terminal access)\n",
+        "\n",
+        "::: {.callout-important}\n",
+        "## Why This Matters for Your Career\n",
+        "If you want to work in trading, asset management, or investment banking, you'll use Bloomberg daily. This lab gives you hands-on experience you can discuss in interviews: \"I built data pipelines using Bloomberg API\" is a concrete skill.\n",
+        ":::\n",
+        "\n",
         "## Lab Objectives\n",
         "\n",
         "By the end of this lab, you will:\n",
@@ -248,16 +283,63 @@
         "symbols_yf = ['AAPL', 'MSFT', 'GOOGL', 'SPY']\n",
         "\n",
         "def fetch_yfinance_with_retry(symbols, period='2y', max_tries=3):\n",
-        "    \"\"\"Fetch data from yfinance with retry logic\"\"\"\n",
+        "    \"\"\"\n",
+        "    Fetch historical data from Yahoo Finance with exponential backoff retry logic.\n",
+        "    \n",
+        "    Implements resilient API calls with automatic retries when rate limits or\n",
+        "    temporary failures occur. Uses exponential backoff to avoid overwhelming\n",
+        "    the API during high-traffic periods.\n",
+        "    \n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    symbols : list of str\n",
+        "        Stock tickers in Yahoo Finance format (e.g., ['AAPL', 'MSFT'])\n",
+        "    period : str, default='2y'\n",
+        "        Historical period to fetch: '1d', '5d', '1mo', '3mo', '6mo', \n",
+        "        '1y', '2y', '5y', '10y', 'ytd', 'max'\n",
+        "    max_tries : int, default=3\n",
+        "        Maximum number of retry attempts before raising error\n",
+        "        \n",
+        "    Returns\n",
+        "    -------\n",
+        "    pd.DataFrame\n",
+        "        Multi-level DataFrame with OHLCV data (Open, High, Low, Close, Volume)\n",
+        "        grouped by ticker. Index is datetime, columns are MultiIndex.\n",
+        "        \n",
+        "    Raises\n",
+        "    ------\n",
+        "    RuntimeError\n",
+        "        If all retry attempts fail\n",
+        "        \n",
+        "    Notes\n",
+        "    -----\n",
+        "    - Uses `auto_adjust=True` for split/dividend-adjusted prices\n",
+        "    - Implements exponential backoff: waits 1s, 2s, 4s between retries\n",
+        "    - Adds random jitter to avoid thundering herd\n",
+        "    - Returns only if non-empty DataFrame received\n",
+        "    \n",
+        "    Examples\n",
+        "    --------\n",
+        "    >>> data = fetch_yfinance_with_retry(['AAPL', 'MSFT'], period='1y')\n",
+        "    >>> data['AAPL']['Close'].iloc[-1]  # Latest AAPL closing price\n",
+        "    182.50\n",
+        "    >>> data.shape\n",
+        "    (252, 10)  # 252 days × (5 fields × 2 symbols)\n",
+        "    \n",
+        "    See Also\n",
+        "    --------\n",
+        "    yf.download : Underlying Yahoo Finance API\n",
+        "    get_close_from_yf : Alternative implementation from Lab 02 APIs\n",
+        "    \"\"\"\n",
         "    for attempt in range(max_tries):\n",
         "        try:\n",
         "            print(f\"Attempt {attempt + 1}/{max_tries}...\")\n",
         "            data = yf.download(\n",
         "                symbols, \n",
         "                period=period,\n",
-        "                auto_adjust=True,\n",
-        "                progress=False,\n",
-        "                group_by='ticker'\n",
+        "                auto_adjust=True,  # Adjust for splits/dividends\n",
+        "                progress=False,    # Suppress progress bar\n",
+        "                group_by='ticker'  # Group columns by ticker\n",
         "            )\n",
         "            \n",
         "            if not data.empty:\n",
@@ -266,6 +348,7 @@
         "        except Exception as e:\n",
         "            print(f\"  Error: {e}\")\n",
         "            if attempt < max_tries - 1:\n",
+        "                # Exponential backoff with random jitter\n",
         "                sleep_time = 2 ** attempt + random.uniform(0, 1)\n",
         "                print(f\"  Retrying in {sleep_time:.1f}s...\")\n",
         "                time.sleep(sleep_time)\n",
@@ -483,10 +566,68 @@
         "\n",
         "class DataPipeline:\n",
         "    \"\"\"\n",
-        "    Professional data pipeline supporting both Bloomberg and free APIs\n",
+        "    Professional-grade data pipeline supporting Bloomberg Terminal and free APIs.\n",
+        "    \n",
+        "    This class demonstrates production patterns: multi-source fetching, data\n",
+        "    validation, provenance logging, and integrity checking. Use this pattern\n",
+        "    for real trading/research systems where data quality is critical.\n",
+        "    \n",
+        "    Attributes\n",
+        "    ----------\n",
+        "    output_dir : str\n",
+        "        Directory for output files (data CSVs, metadata JSON)\n",
+        "    metadata : dict\n",
+        "        Comprehensive provenance log tracking all pipeline operations:\n",
+        "        - pipeline_version : version identifier\n",
+        "        - created : ISO timestamp of pipeline creation\n",
+        "        - python_version : Python version used\n",
+        "        - sources : list of fetch operations with details\n",
+        "        - validation results : quality checks per source\n",
+        "        - data_hash : SHA-256 hash for data integrity\n",
+        "        \n",
+        "    Examples\n",
+        "    --------\n",
+        "    >>> pipeline = DataPipeline(output_dir='my_data')\n",
+        "    >>> # Try Bloomberg first\n",
+        "    >>> data, source = pipeline.fetch_bloomberg(\n",
+        "    ...     symbols=[\"AAPL US Equity\"],\n",
+        "    ...     fields=[\"PX_LAST\"],\n",
+        "    ...     start_date='20230101',\n",
+        "    ...     end_date='20231231'\n",
+        "    ... )\n",
+        "    >>> if data is not None:\n",
+        "    ...     pipeline.validate(data, source)\n",
+        "    ...     pipeline.save(data, 'bloomberg_data.csv')\n",
+        "    >>> else:\n",
+        "    ...     # Fallback to free API\n",
+        "    ...     data, source = pipeline.fetch_yfinance(['AAPL'])\n",
+        "    ...     pipeline.save(data, 'fallback_data.csv')\n",
+        "    \n",
+        "    Notes\n",
+        "    -----\n",
+        "    The metadata JSON file provides complete reproducibility:\n",
+        "    - What data was fetched (symbols, fields, dates)\n",
+        "    - From where (Bloomberg vs yfinance)\n",
+        "    - When (timestamps for each operation)\n",
+        "    - Quality (validation results, issues found)\n",
+        "    - Integrity (data hash for change detection)\n",
+        "    \n",
+        "    This level of logging is required for:\n",
+        "    - Regulatory compliance (MiFID II, SEC Rule 15c3-5)\n",
+        "    - Research reproducibility (academic standards)\n",
+        "    - Production debugging (when models fail, audit the data)\n",
         "    \"\"\"\n",
         "    \n",
         "    def __init__(self, output_dir='pipeline_output'):\n",
+        "        \"\"\"\n",
+        "        Initialize data pipeline with output directory and metadata tracking.\n",
+        "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        output_dir : str, default='pipeline_output'\n",
+        "            Directory path for all pipeline outputs (data CSVs, metadata JSON).\n",
+        "            Created automatically if it doesn't exist.\n",
+        "        \"\"\"\n",
         "        self.output_dir = output_dir\n",
         "        os.makedirs(output_dir, exist_ok=True)\n",
         "        self.metadata = {\n",
@@ -497,7 +638,34 @@
         "        }\n",
         "    \n",
         "    def fetch_bloomberg(self, symbols, fields, start_date, end_date):\n",
-        "        \"\"\"Fetch from Bloomberg Terminal\"\"\"\n",
+        "        \"\"\"\n",
+        "        Fetch historical data from Bloomberg Terminal via Desktop API.\n",
+        "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        symbols : list of str\n",
+        "            Bloomberg security identifiers (e.g., [\"AAPL US Equity\", \"MSFT US Equity\"])\n",
+        "        fields : list of str\n",
+        "            Bloomberg field mnemonics (e.g., [\"PX_LAST\", \"PX_VOLUME\"])\n",
+        "            Use FLDS <GO> on Terminal to search available fields\n",
+        "        start_date : str\n",
+        "            Start date in YYYYMMDD format (e.g., '20230101')\n",
+        "        end_date : str\n",
+        "            End date in YYYYMMDD format (e.g., '20231231')\n",
+        "            \n",
+        "        Returns\n",
+        "        -------\n",
+        "        tuple of (pd.DataFrame, str) or (None, None)\n",
+        "            If successful: (data DataFrame, 'bloomberg')\n",
+        "            If failed: (None, None)\n",
+        "            \n",
+        "        Notes\n",
+        "        -----\n",
+        "        - Requires Bloomberg Terminal running and logged in\n",
+        "        - Requires `blpapi` Python package installed\n",
+        "        - Logs fetch metadata for provenance tracking\n",
+        "        - Fetches daily periodicity (can be modified for intraday)\n",
+        "        \"\"\"\n",
         "        print(\"Fetching from Bloomberg...\")\n",
         "        \n",
         "        try:\n",
@@ -526,7 +694,28 @@
         "            return None, None\n",
         "    \n",
         "    def fetch_yfinance(self, symbols, period='2y'):\n",
-        "        \"\"\"Fetch from Yahoo Finance (fallback)\"\"\"\n",
+        "        \"\"\"\n",
+        "        Fetch historical data from Yahoo Finance (fallback when Bloomberg unavailable).\n",
+        "        \n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        symbols : list of str\n",
+        "            Yahoo Finance tickers (e.g., ['AAPL', 'MSFT'])\n",
+        "        period : str, default='2y'\n",
+        "            Historical period: '1d', '5d', '1mo', '3mo', '6mo', '1y', '2y', '5y', '10y'\n",
+        "            \n",
+        "        Returns\n",
+        "        -------\n",
+        "        tuple of (pd.DataFrame, str) or (None, None)\n",
+        "            If successful: (data DataFrame with standardized columns, 'yfinance')\n",
+        "            If failed: (None, None)\n",
+        "            \n",
+        "        Notes\n",
+        "        -----\n",
+        "        - Converts yfinance OHLCV format to match Bloomberg structure\n",
+        "        - Logs fetch metadata for provenance tracking\n",
+        "        - Uses retry logic from fetch_yfinance_with_retry()\n",
+        "        \"\"\"\n",
         "        print(\"Fetching from Yahoo Finance...\")\n",
         "        \n",
         "        try:\n",
