--- a/labs/lab05_jkp_starter.ipynb
+++ b/labs/lab05_jkp_starter.ipynb
@@ -17,10 +17,54 @@
         "\n",
         "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/quinfer/fin510-colab-notebooks/blob/main/labs/lab05_jkp_starter.ipynb)\n",
         "\n",
+        "## Before You Code: The Big Picture\n",
+        "\n",
+        "The **Jensen, Kelly, and Pedersen (JKP) factor dataset** contains returns for hundreds of documented investment factors from academic research. This is the gold standard for factor replication studies—and it's what you'll use for Coursework 2.\n",
+        "\n",
+        "::: {.callout-note}\n",
+        "## What Are Factors?\n",
+        "\n",
+        "**Factors** are characteristics that explain cross-sectional stock returns:\n",
+        "- **Momentum (MOM)**: Past winners outperform past losers\n",
+        "- **Value (HML)**: Cheap stocks outperform expensive stocks (High Minus Low book-to-market)\n",
+        "- **Size (SMB)**: Small stocks outperform large stocks (Small Minus Big)\n",
+        "- **Quality, Profitability, Investment**: Other documented anomalies\n",
+        "\n",
+        "**Why They Matter:**\n",
+        "- If factors work, you can build systematic strategies around them\n",
+        "- If factors are spurious (data mining), they won't persist out-of-sample\n",
+        "- Factor replication tests whether published findings are real or lucky\n",
+        "\n",
+        "**Your Task in Coursework 2:**\n",
+        "Pick a factor, replicate it using JKP data, evaluate performance with rigorous backtesting, and critically assess whether it's exploitable.\n",
+        ":::\n",
+        "\n",
+        "### What You'll Learn Today\n",
+        "\n",
+        "This is a **quick starter lab** to familiarize you with:\n",
+        "\n",
+        "- ✅ Loading JKP factor data (monthly returns)\n",
+        "- ✅ Computing CAPM alpha (does factor beat the market?)\n",
+        "- ✅ Basic prediction setup (OLS vs Ridge for next-month market return)\n",
+        "- ✅ Understanding what you'll extend for Coursework 2\n",
+        "\n",
+        "**Time estimate:** 20-30 minutes (this is intentionally brief—real work happens in your coursework)\n",
+        "\n",
+        "::: {.callout-important}\n",
+        "## Coursework 2 Preview\n",
+        "This lab shows the **minimal skeleton**. For Coursework 2, you'll:\n",
+        "- Use full JKP dataset (not just this sample)\n",
+        "- Implement walk-forward validation (not simple train/test split)\n",
+        "- Add HAC standard errors (Newey-West) for proper inference\n",
+        "- Calculate out-of-sample R², Sharpe ratios, CER gains\n",
+        "- Write critical analysis of replication results\n",
+        ":::\n",
+        "\n",
         "## Objective\n",
         "\n",
         "- Load a small JKP factor slice (CSV) and compute rolling alpha vs market.  \n",
         "- Run a tiny prediction baseline (OLS vs ridge) for next‑month `MKT`.\n",
+        "- Understand the scaffolding you'll extend for Coursework 2.\n",
         "\n",
         "## 1) Load data (JKP CSV or course sample)\n",
         "\n",
