--- a/labs/lab06_overfitting.ipynb
+++ b/labs/lab06_overfitting.ipynb
@@ -16,6 +16,48 @@
         "  message: false\n",
         "---\n",
         "\n",
+        "## Before You Code: The Big Picture\n",
+        "\n",
+        "The #1 problem in quantitative finance: **your backtest looks great, but it fails in live trading**. Why? **Overfitting**—you optimized parameters on the same data you tested on. Your \"alpha\" is actually selection bias.\n",
+        "\n",
+        "::: {.callout-note}\n",
+        "## The Backtest Overfitting Problem\n",
+        "\n",
+        "**The Scenario:**\n",
+        "You test 200 trading strategies on 20 years of data. One strategy has a Sharpe ratio of 2.5—amazing! You deploy it with real money. It loses money immediately. What happened?\n",
+        "\n",
+        "**The Problem:**\n",
+        "- With 200 tries, **one will look good by pure luck** (multiple testing)\n",
+        "- In-sample optimization + in-sample testing = guaranteed overfitting\n",
+        "- Traditional cross-validation doesn't detect this (data leakage across folds)\n",
+        "\n",
+        "**The Solution (Bailey & López de Prado):**\n",
+        "1. **CSCV (Combinatorially Symmetric Cross-Validation)**: Proper walk-forward splits\n",
+        "2. **PBO (Probability of Backtest Overfitting)**: Quantifies selection bias\n",
+        "3. **PSR (Probabilistic Sharpe Ratio)**: Tests if Sharpe > 0 with statistical significance\n",
+        "4. **DSR (Deflated Sharpe Ratio)**: Adjusts for multiple testing\n",
+        "\n",
+        "**The Evidence:**\n",
+        "Harvey, Liu & Zhu (2016, RFS): Most published factor strategies fail out-of-sample due to p-hacking and multiple testing. PBO/PSR help detect this **before** losing real money.\n",
+        ":::\n",
+        "\n",
+        "### What You'll Build Today\n",
+        "\n",
+        "By the end of this lab, you will have:\n",
+        "\n",
+        "- ✅ Understanding of why standard backtesting fails\n",
+        "- ✅ CSCV implementation for honest validation\n",
+        "- ✅ PBO calculation showing selection bias\n",
+        "- ✅ PSR/DSR metrics for performance significance\n",
+        "- ✅ Critical perspective on published trading strategies\n",
+        "\n",
+        "**Time estimate:** 90-120 minutes (this is advanced material—take your time)\n",
+        "\n",
+        "::: {.callout-important}\n",
+        "## Why This Matters for Coursework 2\n",
+        "Your factor replication **must** use walk-forward validation and report PBO/PSR. Otherwise, your Sharpe ratio is meaningless—it's just in-sample optimization parading as out-of-sample performance. This lab shows you how to do it right.\n",
+        ":::\n",
+        "\n",
         "# Objectives\n",
         "\n",
         "- Diagnose backtest overfitting with combinatorially symmetric cross‑validation (CSCV)  \n",
@@ -23,7 +65,7 @@
         "- Quantify performance significance via Probabilistic Sharpe Ratio (PSR); discuss Deflated Sharpe Ratio (DSR)\n",
         "\n",
         "::: callout-note\n",
-        "This lab follows Bailey & López de Prado’s approach to selection bias: CSCV → PBO and PSR/DSR. We implement lightweight utilities and show how to compare against `mlfinlab` if available.\n",
+        "This lab follows Bailey & López de Prado's approach to selection bias: CSCV → PBO and PSR/DSR. We implement lightweight utilities and show how to compare against `mlfinlab` if available.\n",
         ":::\n",
         "\n",
         "# Setup"
